intermediate version of GF feature extraction